# GeodesicPath

./: .gitmodules  BULD.bazel  CMakeLists.txt  Complex.cpp  Complex.h  DenseMatrix.cpp  DenseMatrix.h  Edge.cpp  Edge.h  Face.cpp  Face.h  README.md  SparseMatrix.cpp  SparseMatrix.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  WORKSPACE  Wedge.cpp  Wedge.h  mesh.cpp  mesh.h  utilTypes.cpp  utilTypes.h  utils.cpp  utils.h
build_tools/: compdb.BUILD.bazel  generate_compile_commands.sh
geodesic_path/: BUILD.bazel  DenseMatrix.cpp  SparseMatrix.cpp  SparseMatrix.h  edge.cpp  edge.h  edge_flip.cpp  edge_flip.h  face.cpp  face.h  mesh.cpp  mesh.h  point.h  utils.cpp  vertex.cpp  vertex.h
geodesic_path/tests/: edge_flip_tests.cpp  edge_tests.cpp  face_tests.cpp  mesh_tests.cpp  point_tests.cpp  vertex_tests.cpp
tests/: base_test.cpp  catch_amalgamated.cpp  catch_amalgamated.hpp
