load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

NO_MERCY_FLAGS = [
    "-Wall",
    "-Wextra",
    "-Werror",
]

cc_library(
    name="geodesicpath",
    srcs = [
        "mesh.cpp",
        "edge_flip.cpp",
    ],
    hdrs = [
      "point.h",
      "mesh.h",
      "edge_flip.h",
    ],
    copts = ["-std=c++17"] + NO_MERCY_FLAGS,
    visibility = ["//visibility:public"],
)

cc_test(
    name="tests",
    srcs=[
        "tests/point_tests.cpp",
        "tests/mesh_tests.cpp",
        "tests/edge_flip_tests.cpp"
    ],
    copts=["-std=c++17"] + NO_MERCY_FLAGS,
    linkstatic=True,
    deps =[
        "geodesicpath",
        "@gtest//:gtest_main",
    ],
)